--- a/squealy/squealy-web/src/sass/_base.scss
+++ b/squealy/squealy-web/src/sass/_base.scss
@@ -198,3 +198,25 @@ hr {
   background: $squealy-success-active;
   border-color: $squealy-success-active;  
 }
+
+
+
+.helpContainer {
+  width: 100%;
+  height: auto;
+
+  .codeDescriptionContainer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: auto;
+    justify-content: space-around;
+    padding: 20px;
+    .helpDescrition {
+      width: 50%;
+      padding: 20px;
+    }
+  
+  }
+
+}
