--- a/squealy/squealy-web/src/sass/_base.scss
+++ b/squealy/squealy-web/src/sass/_base.scss
@@ -199,8 +199,6 @@ hr {
   border-color: $squealy-success-active;  
 }
 
-
-
 .helpContainer {
   width: 100%;
   height: auto;
@@ -212,7 +210,7 @@ hr {
     height: auto;
     justify-content: space-around;
     padding: 20px;
-    .helpDescrition {
+    .codeDescription {
       width: 50%;
       padding: 20px;
     }
