--- a/squealy/squealy-web/src/sass/_base.scss
+++ b/squealy/squealy-web/src/sass/_base.scss
@@ -203,18 +203,31 @@ hr {
   width: 100%;
   height: auto;
 
+    h5 {
+      font-weight: bold;
+      font-size: 16px;
+
+      a {
+        margin: 0 5px;
+      }
+    }
+
   .code-description-container {
     display: flex;
     flex-direction: row;
     width: 100%;
     height: auto;
     justify-content: space-around;
-    padding: 20px;
+    padding-top: 15px;
+
     .code-description {
       width: 50%;
-      padding: 20px;
+      padding-right: 15px;
+
+      p {
+        text-align: justify;
+      }
     }
-  
   }
 
 }
