Implemented show param modal if test values are not added. Fixed table height issue. Show edit form on row click

--- a/squealy/squealy-web/src/Components/sass/_googleTable.scss
+++ b/squealy/squealy-web/src/Components/sass/_googleTable.scss
@@ -13,6 +13,9 @@
 }
 
 .google-visualization-table {
+  > div:first-child {
+    max-height: 400px !important;
+  }
   .gradient {
     background-image: none !important;
   }
@@ -20,5 +23,4 @@
   .google-visualization-table-table td {
     padding: 8px 1.35em;
   }
-} 
-
+}
