--- a/squealy/squealy-web/src/Components/sass/_modal.scss
+++ b/squealy/squealy-web/src/Components/sass/_modal.scss
@@ -7,6 +7,7 @@
   .validation-query {
     padding: 0 4px 0 0 ;
   }
+
   .add-modal-content {
     > button.btn-success {
       margin-top: 10px;
@@ -63,6 +64,12 @@
     position: absolute;
     top: 15px;
     margin-left: 4px;
+  }
+}
+
+.app-modal-content {
+  > .row {
+    padding-bottom: 10px;
   }
 }
 
