--- a/example/templates/registration/login.html
+++ b/example/templates/registration/login.html
@@ -9,15 +9,19 @@
 {% block content %}
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<div class="login-error">
+	<span>Your username and password didn't match. Please try again.</span>
+</div>
 {% endif %}
 
 {% if next %}
     {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
+    <div class="login-error">
+	    <p>
+	    	Your account doesn't have access to this page. To proceed,
+	    	please login with an account that has access.
+	    </p>
+    </div>div>
     {% endif %}
 {% endif %}
 
