CSS fixes in login page

--- a/example/templates/registration/login.html
+++ b/example/templates/registration/login.html
@@ -17,11 +17,11 @@
 {% if next %}
     {% if user.is_authenticated %}
     <div class="login-error">
-	    <p>
+	    <span>
 	    	Your account doesn't have access to this page. To proceed,
 	    	please login with an account that has access.
-	    </p>
-    </div>div>
+	    </span>
+    </div>
     {% endif %}
 {% endif %}
 
