--- a/squealy/squealy-web/src/Components/sass/_paramDefModal.scss
+++ b/squealy/squealy-web/src/Components/sass/_paramDefModal.scss
@@ -36,6 +36,7 @@
   border: 1px solid $light-gray-color;
 
   > tbody > tr {
+    cursor: pointer;
     > td > i.fa-trash-o {
       opacity: 0.5;
       cursor: pointer;
