Fixed HIR-472 Set Filter Order and Render it in View Mode as per order

--- a/squealy/squealy-web/src/sass/_base.scss
+++ b/squealy/squealy-web/src/sass/_base.scss
@@ -51,7 +51,7 @@ select {
   border-radius: 4px;
 }
 
-input[type='text'] {
+input[type='number'], input[type='text'] {
   padding: 7px;
   min-width: 200px;
   border-radius: 4px;
