HIR:491 Fixed parameter definition modal.

--- a/squealy/squealy-web/src/Components/sass/_paramDefModal.scss
+++ b/squealy/squealy-web/src/Components/sass/_paramDefModal.scss
@@ -71,9 +71,11 @@
   }
 }
 
-.param-row:hover {
-  @include on-hover-style
+.param-row:hover, .selected.param-row {
+  @include on-hover-style;
+  background-color: #f5f5f5; 
 }
+
 
 .param-heading {
   display: inline-block;
