Added Error message component

--- a/squealy/squealy-web/src/sass/_variables.scss
+++ b/squealy/squealy-web/src/sass/_variables.scss
@@ -18,3 +18,4 @@ $note-text-color: #cf4647;
 $note-text-color-active: #9f292a;
 $warning-bg-color: #ffcccc;
 $red-color: #ff0000;
+$error-bg-color: #e2747e;
