--- a/squealy/squealy-web/src/Components/sass/_modal.scss
+++ b/squealy/squealy-web/src/Components/sass/_modal.scss
@@ -73,3 +73,27 @@
   }
 }
 
+.error-modal {
+  .modal-header {
+    background: $error-bg-color;
+  }
+
+  .modal-title > span > .fa-exclamation-triangle {
+    padding-right: 10px;
+  }
+
+  .modal-body{
+    .error-type {
+      font-weight: bold;
+      text-transform: capitalize;
+      color: $note-text-color;
+      font-size: 16px; 
+    }
+
+    > div > p {
+      display: inline;
+      line-height: 3;
+    }
+  }
+}
+
