Added transpose button.

--- a/squealy/squealy-web/src/Components/sass/_apiDesignView.scss
+++ b/squealy/squealy-web/src/Components/sass/_apiDesignView.scss
@@ -4,6 +4,7 @@
   padding-bottom: 2px;
 
   .tab-component {
+    min-width: 120px;
     margin-left: 10px;
     font-size: 14px;
     border-radius: 28px;
