--- a/squealyproj/static/css/login.css
+++ b/squealyproj/static/css/login.css
@@ -1,7 +1,11 @@
+.login-form-wrapper {
+  margin-top: 100px
+}
+
 .form-signin {
   padding: 20px 50px;
   max-width: 430px;
-  margin: 10px auto;
+  margin: 30px auto;
   vertical-align: middle;
   border: 1px solid #ddd;
   box-shadow: 0px 3px 7px 0px #ddd;
@@ -39,7 +43,7 @@ label {
 
 .submit-btn {
   background: #0c8adc;
-  margin: 20px 39%;
+  margin: 10px 39%;
   border: 1px solid #0c8adc;
   padding: 5px 20px;
   color: #fff;
@@ -48,5 +52,57 @@ label {
 .login-error {
   display: flex;
   justify-content: center;
-  margin-top: 8%;
+}
+
+.google-logo {
+  width: 27px;
+  float: left;
+  cursor: pointer;
+  padding-right: 7px;
+}
+
+.google-label {
+  vertical-align: middle;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 200;
+  font-style: normal;
+  font-stretch: normal;
+  text-align: center;
+  color: #fff;
+  text-shadow: 0 0 0 rgba(0, 0, 0, .1);
+  cursor: pointer;
+}
+
+.google-login-btn {
+  display: block;
+  margin: auto;
+  background-color: #f3645c;
+  border: 0;
+  color: #fff;
+  padding: 5px 20px;
+  transition: background-color .4s;
+  -webkit-transition: background-color .4s;
+}
+
+.hr-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  align-self: center;
+  padding: 20px 0;
+}
+
+.hr-line {
+  height: 1px;
+  flex: 1;
+  opacity: 0.3;
+  background-color: #000001;
+}
+
+.or {
+  font-size: .6em;
+  opacity: .3;
+  padding: 0.2em;
 }
