--- a/squealy/templates/swagger.html
+++ b/squealy/templates/swagger.html
@@ -5,7 +5,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Swagger UI</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static "swagger-ui.css" %}" >
   <!--<link rel="icon" type="image/png" href="../public/favicon-32x32.png" sizes="32x32" />-->
   <!--<link rel="icon" type="image/png" href="../public/favicon-16x16.png" sizes="16x16" />-->
@@ -78,7 +77,6 @@ window.foo = function(spec){
     dom_id: '#swagger-ui',
     presets: [
       SwaggerUIBundle.presets.apis,
-      // yay ES6 modules ↘
       Array.isArray(SwaggerUIStandalonePreset) ? SwaggerUIStandalonePreset : SwaggerUIStandalonePreset.default
     ],
     plugins: [
@@ -130,17 +128,8 @@ function getCookie(name) {
   }
   return cookieValue;
 }
-
-
-  apiCall('http://localhost:8000/swagger-api/',{},'GET');
-
-  // Build a system
-
-
-  //document.getElementsByTagName('head')[0].appendChild(script);
-
+  apiCall(window.location.origin + '/swagger-api/',{},'GET');
 }
-
 
 </script>
 </body>
