--- a/squealy/templates/swagger.html
+++ b/squealy/templates/swagger.html
@@ -66,7 +66,7 @@
 </svg>
 
 <div id="swagger-ui"></div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script src="{% static "js/jquery.min.js " %} "></script>
 <script src="{% static "swagger-ui-bundle.js" %} "> </script>
 <script src="{% static "swagger-ui-standalone-preset.js" %} "> </script>
 <script>
