Bug fixes and latest build

--- a/squealy/templates/report.html
+++ b/squealy/templates/report.html
@@ -1,4 +1,4 @@
-{% if charts %}
+if {% if charts %}
 	{% for chart in charts %}
 	<h4 class="table-heading" style="width: 100%;background-color: #008dc1;color: #ffffff;margin: 0;padding: 15px;text-align: left;text-transform: capitalize;">{{ chart.name }}</h4>
 		<div class="table-scroll" style="overflow: auto;max-height: 342px;">
