--- a/squealy/squealy-web/src/Components/sass/_apiDesignView.scss
+++ b/squealy/squealy-web/src/Components/sass/_apiDesignView.scss
@@ -30,9 +30,11 @@
     .Select {
       display: inline-block;
       flex-grow: 6;
+      border-right: 20px;
 
       .Select-control {
-        border-radius: 28px;
+        border-top-left-radius: 28px;
+        border-bottom-left-radius: 28px;
         background: $squealy-theme-blue;
 
         .Select-value-label {
@@ -59,8 +61,17 @@
 
     .add-new {
       cursor: pointer;
-      color: #0c8adc;
+      color: white;
       font-size: 20px;
+      padding-bottom: 2px;
+      padding-right: 9px;
+      background-color: #0C8ADC;
+      border-bottom-right-radius: 1em;
+      border-top-right-radius: 1em;
+      height: 35px;
+      border: 1px solid #0C8ADC;
+      margin-left: -0.5px;
+      
     }
   }
   .view-btn {
@@ -106,6 +117,7 @@ tr.editable-table-row {
     left: 73px;
     font-size: 18px;
     cursor: pointer;
+    padding-top: 6px;
   }
 }
 
