--- a/squealyproj/templates/base.html
+++ b/squealyproj/templates/base.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="{% static "images/logo.png" %}" />
+      <img class="logo" src="{% static "images/squealy-logo.png" %}" />
     </header>
     {% block content %}{% endblock %}
     <script src="{% static "js/jquery.min.js" %}"></script>
