--- a/squealy/squealy-web/src/Components/sass/_sideMenu.scss
+++ b/squealy/squealy-web/src/Components/sass/_sideMenu.scss
@@ -17,15 +17,20 @@
     margin-bottom: 25px;
     > ul {
       list-style: none;
+      overflow-y:scroll;
       padding: 0;
+      width: 100%;
+      height: 100%;
+
       > li {
+        position: relative;
+        width: 100%;
         margin-top: 2%;	
         margin-right: 15px;
         text-indent: 50px;
         height: 25px;
         padding-top: 4px;
         white-space: nowrap;
-        overflow: hidden;
         text-overflow: ellipsis;
         span {
           cursor: pointer;
@@ -39,6 +44,7 @@
         }
       }
     }
+
     .selected-chart {
       text-decoration: underline;
       font-weight: bold;
@@ -118,4 +124,24 @@
 
 .chart-name-error {
   color: $red-color;
+}
+
+.side-menu-upper {
+    height: 65%;
+    max-height: 350px;
+}
+
+#chart-list-ul {
+  height: 90%;
+}
+
+.side-menu-lower {
+  height: 25%;
+  max-height: 160px;
+  
+}
+
+#filter-list-ul {
+  height: 70%;
+  padding-bottom: 10px;
 }
