--- a/squealy/squealy-web/src/Components/sass/_sideMenu.scss
+++ b/squealy/squealy-web/src/Components/sass/_sideMenu.scss
@@ -18,22 +18,23 @@
     > ul {
       list-style: none;
       overflow-y:scroll;
+      overflow-x: hidden;
       padding: 0;
-      width: 100%;
       height: 100%;
 
       > li {
         position: relative;
-        width: 100%;
         margin-top: 2%;	
         margin-right: 15px;
         text-indent: 50px;
         height: 25px;
         padding-top: 4px;
-        white-space: nowrap;
-        text-overflow: ellipsis;
         span {
+          display: block;
           cursor: pointer;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
       }
       > li:hover, li:focus {
