--- a/squealy/squealy-web/src/Components/sass/_apiDesignView.scss
+++ b/squealy/squealy-web/src/Components/sass/_apiDesignView.scss
@@ -21,6 +21,9 @@
     }
   }
 
+  .validation-btn {
+    margin-top: 2px
+  }
   .selected-db-wrapper {
     position: relative;
     display: inline-flex;
